--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Splash Screen -->
+<div id="splash-screen">
+  <div class="splash-logo"></div>
+</div>
+
   <header>
     <div class="navbar">
       <div class="nav-logo border">
